<resources>
    <string name="app_name">TuBarberia</string>
    <string name="password_app">Password</string>
    <string name="username_login">User</string>
    <string name="title_app">YouBarber</string>
    <string name="entrar_login">Enter</string>
    <string name="registrar_login">Register</string>
    <string name="txt_regist">!Hello! Sign up:</string>
    <string name="name_regist">Name</string>
    <string name="mail_regist">Mail</string>
    <string name="btn_regist">Sign in</string>
    <string name="goreser_detail">Go to reserve</string>
    <string name="txtser_reserv">Select from one to two services to reserve</string>
    <string name="corte_reserv">Haircut</string>
    <string name="arreglo_reserv">Beard trim</string>
    <string name="afeitada_reserv">Shaved</string>
    <string name="bigote_reserv">Cut and outline of mustache</string>
    <string name="writedate_reserv">Enter the date to reserve</string>
    <string name="ejem_date">10/04/2017</string>
    <string name="writetime_reserv">Choose the reservation time</string>
    <string name="ejem_time">10:00 AM</string>
    <string name="btn_reservar">Reserve</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_more">More</string>
    <string name="menu_about">About of</string>
    <string name="menu_close">Close session</string>
    <string name="label_reser">Reservation made</string>
    <string name="label_ubication">Ubication Barbers</string>
</resources>
