<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="@style/buttons_style"
            android:id="@+id/btn_reservar"
            android:layout_width="@dimen/small_zero"
            android:layout_height="@dimen/small_thirtyfive"
            android:layout_marginBottom="@dimen/small_eight"
            android:layout_marginEnd="@dimen/small_twentyfive"
            android:layout_marginLeft="@dimen/small_eight"
            android:layout_marginRight="@dimen/small_eight"
            android:layout_marginStart="@dimen/small_twentyfive"
            android:layout_marginTop="@dimen/small_twentyfive"
            android:text="@string/btn_reservar"
            android:onClick="Reservar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:layout_constraintVertical_bias="1.0" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardView"
            android:layout_marginTop="@dimen/small_eight">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/small_zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_fifteen"
                    android:layout_marginRight="@dimen/small_fifteen"
                    android:layout_marginTop="@dimen/small_eight"
                    android:text="@string/txtser_reserv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/small_sixteens"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="@dimen/small_fifteen"
                    android:layout_marginEnd="@dimen/small_fifteen" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_twenty"
                    android:text="@string/corte_reserv"
                    app:layout_constraintLeft_toLeftOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_fifteen"
                    android:text="@string/arreglo_reserv"
                    app:layout_constraintLeft_toLeftOf="@+id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_fifteen"
                    android:text="@string/afeitada_reserv"
                    app:layout_constraintLeft_toLeftOf="@+id/checkBox2"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_fifteen"
                    android:text="@string/bigote_reserv"
                    app:layout_constraintLeft_toLeftOf="@+id/checkBox3"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_eight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:id="@+id/cardView2">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="@dimen/small_zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_fifteen"
                    android:layout_marginRight="@dimen/small_fifteen"
                    android:layout_marginTop="@dimen/small_eight"
                    android:text="@string/writedate_reserv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/small_sixteens"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/small_fifteen"
                    android:layout_marginEnd="@dimen/small_fifteen" />

                <EditText
                    android:id="@+id/date_reserv"
                    android:layout_width="@dimen/small_zero"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_eight"
                    android:layout_marginLeft="@dimen/small_fifteen"
                    android:layout_marginRight="@dimen/small_fifteen"
                    android:layout_marginTop="@dimen/small_twentyfive"
                    android:ems="10"
                    android:hint="@string/ejem_date"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginStart="@dimen/small_fifteen"
                    android:layout_marginEnd="@dimen/small_fifteen" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_zero"
            android:layout_marginRight="@dimen/small_zero"
            android:layout_marginTop="@dimen/small_eight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            android:id="@+id/cardView3">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="@dimen/small_zero"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_fifteen"
                    android:layout_marginRight="@dimen/small_fifteen"
                    android:layout_marginTop="@dimen/small_eight"
                    android:text="@string/writetime_reserv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/small_sixteens"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/time_reserv"
                    android:layout_width="@dimen/small_zero"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_eight"
                    android:layout_marginLeft="@dimen/small_fifteen"
                    android:layout_marginRight="@dimen/small_fifteen"
                    android:layout_marginTop="@dimen/small_twentyfive"
                    android:ems="10"
                    android:hint="@string/ejem_time"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintVertical_bias="0.137" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>
