<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="regist"
            type="unicauca.movil.tubarberia.RegistroActivity"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_forty"
            android:scaleType="centerCrop"
            android:background="@drawable/regist"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_forty"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mask"
            />

        <TextView
            android:id="@+id/title_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textSize="@dimen/medium_fortys"
            android:textColor="@color/appTitle"
            android:layout_alignBottom="@+id/img"
            android:layout_marginLeft="@dimen/small_fifteen"
            android:layout_marginRight="@dimen/small_fifteen"
            tools:text="YouBarber"
            />

    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/small_fifteen"
                    >

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_regist"
                        android:layout_marginTop="@dimen/small_ten"
                        android:textSize="@dimen/small_twentys"
                        />

                    <!-- Username -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_fifteen"
                        android:layout_marginBottom="@dimen/small_eight"
                        >

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/name_regist"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <!-- Email -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_eight"
                        android:layout_marginBottom="@dimen/small_eight"
                        >

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/mail_regist"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <!-- Password -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_eight"
                        android:layout_marginBottom="@dimen/small_eight"
                        >

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password_app"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_ten"
                        android:layout_marginBottom="@dimen/small_twenty"
                        android:text="@string/btn_regist"
                        android:padding="@dimen/small_twelve"
                        tools:text="Create Account"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>

