<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    
    <data>
        
        <variable
            name="login"
            type="unicauca.movil.tubarberia.LoginActivity"/>
        
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteY="337dp"
            tools:layout_editor_absoluteX="0dp"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/small_zero"
            android:layout_height="@dimen/small_zero"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:srcCompat="@drawable/barber_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/small_zero"
            android:layout_height="@dimen/small_zero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/mask"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_eight"
            android:layout_marginEnd="@dimen/small_eight"
            android:layout_marginLeft="@dimen/small_eight"
            android:layout_marginRight="@dimen/small_eight"
            android:layout_marginStart="@dimen/small_eight"
            android:text="@string/title_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/appTitle"
            android:textSize="@dimen/medium_fortys"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:onClick="@{()-> login.goToNext()}"
            android:text="@string/entrar_login"
            app:layout_constraintLeft_toRightOf="@+id/button2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:onClick="@{()-> login.goToRegist()}"
            android:text="@string/registrar_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginLeft="@dimen/small_eight"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/small_eight"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username_login"
                android:inputType="text|textEmailAddress"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="46dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/small_zero"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:layout_marginBottom="@dimen/small_eight"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            android:layout_marginLeft="@dimen/small_eight"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/small_eight"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password_app"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="142dp" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</layout>

